--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+# Python 3.13 compatible requirements
 streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
+pandas==2.1.4
+numpy==1.26.0
+scikit-learn==1.3.2
 pgmpy==0.1.21
-scikit-learn==1.3.0
