--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 streamlit==1.28.0
-pandas==1.5.3
-numpy==1.24.3
-scikit-learn==1.2.2
-pgmpy==0.1.21
-networkx==2.8.8
+pandas==2.0.0
+numpy==1.24.0
+plotly=5.0.0
